# link

./: .gitignore  .gitmodules  ARCHITECTURE.md  AUDIO_CAPTURE.md  CLAUDE.md  Cargo.toml  HACTAR_ARCH.md  HACTAR_PLAN.md  Makefile  QUICKSTART.md  README.md  ui-flash-log.txt  web-ctl-log.txt
.github/workflows/: ci.yml
bootloader/: Cargo.toml  README.md
bootloader/examples/: stm32_info.rs
bootloader/src/: esp.rs  lib.rs  stm.rs
core/: Cargo.toml
core/src/: led.rs  lib.rs  tlv.rs
ctl/: Cargo.toml  all-ping.sh  test.sh
ctl/docs/: code-audit-report.md  test-plan.md
ctl/src/: buffered_port.rs  main.rs  serial.rs  sync_adapter.rs
ctl/src/handlers/: mgmt.rs  mod.rs  net.rs  ui.rs
docs/: code-audit-report.md  ctl-architecture-review.md  ctl-vs-webctl-comparison.md  hactar-protocol-alignment.md  serial-port-analysis.md  test-plan.md  tlv-protocol-spec.md
echo-server/: Cargo.toml
echo-server/src/: main.rs
lib/cortex-m-stack/: Cargo.toml
lib/cortex-m-stack/src/: lib.rs
link/: Cargo.toml
link/src/: integration_tests.rs  lib.rs  mocks.rs  testing.rs
link/src/ctl/: audio_capture.rs  core.rs  esp.rs  flash.rs  mod.rs  port.rs  stm.rs
link/src/ctl/espflash/: command.rs  error.rs  mod.rs
link/src/ctl/espflash/connection/: mod.rs  reset.rs
link/src/ctl/espflash/flasher/: mod.rs  stubs.rs
link/src/ctl/espflash/image_format/: idf.rs  metadata.rs  mod.rs
link/src/mgmt/: mod.rs  storage.rs
link/src/net/: jitter_buffer.rs  mod.rs  storage.rs
link/src/shared/: channel.rs  chip_config.rs  chunk.rs  config.rs  jitter_buffer.rs  led.rs  logging.rs  mocks.rs  mod.rs  moq.rs  protocol.rs  protocol_config.rs  sframe.rs  stack_monitor.rs  timing.rs  tlv.rs  uart_config.rs  wifi.rs
link/src/ui/: audio.rs  eeprom.rs  log.rs  mod.rs  sframe.rs
mgmt/: Cargo.toml
mgmt/.cargo/: config.toml
mgmt/src/: main.rs  storage.rs
net/: Cargo.toml  build.rs  partitions.csv  run.sh  sdkconfig.defaults
net-idf/: Cargo.toml  partitions.csv  run.sh  sdkconfig.defaults
net-idf/.cargo/: config.toml
net-idf/src/: main.rs
net/.cargo/: config.toml
net/examples/: ws.rs
net/src/: main.rs
notes/: CLAUDE_RESEARCH.md  LINK_PLAN.md
src/: lib.rs  tlv.rs
tools/audio-debug/: Cargo.toml
tools/audio-debug/src/: main.rs  wm8960.rs
tools/echo-client/: Cargo.toml
tools/echo-client/src/: main.rs
tools/mgmt-echo/: Cargo.toml  README.md  build.rs  flash-mgmt-echo.sh  memory.x
tools/mgmt-echo/.cargo/: config.toml
tools/mgmt-echo/src/: main.rs
tools/moq-sub/: Cargo.toml  PLAYOUT.md
tools/moq-sub/src/: main.rs
tools/moqws/: Cargo.toml  PROTOCOL.md  README.md
tools/moqws/client/: example.html  moqws.d.ts  moqws.js
tools/moqws/src/: main.rs
tools/serial-debug/: Cargo.toml
tools/serial-debug/src/: main.rs
ui/: Cargo.toml
ui/.cargo/: config.toml
ui/src/: main.rs  wm8960.rs
web-ctl/: Cargo.toml  build.sh
web-ctl/.cargo/: config.toml
web-ctl/src/: lib.rs  serial.rs
web-ctl/www/: index.html
web-link/: Cargo.toml
web-link/src/: channel_io.rs  lib.rs
web-link/www/: audio-processor.js  index.html
