[package]
name = "link"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
virtual-serialport = "0.1.3"

[dependencies]
async-channel = "2.3"
embedded-io-async = "0.7.0"
futures = { version = "0.3.31", default-features = false, features = ["async-await"] }
heapless = "0.9.2"
num_enum = { version = "0.7.5", default-features = false }
tokio = { version = "1.48.0", features = ["full"] }
