[package]
name = "link"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
async-ringbuffer = "0.5.5"
async-channel = "2.3"
critical-section = { version = "1.2", features = ["std"] }
embedded-io-adapters = { version = "0.6", features = ["futures-03"], default-features = false }
virtual-serialport = "0.1.3"
tokio = { version = "1.48.0", features = ["full"] }

[features]
default = ["defmt"]
defmt = ["dep:defmt"]
trace-tlv = ["defmt"]  # Verbose TLV read/write logging - easy to disable

[dependencies]
defmt = { version = "1", optional = true }
embassy-sync = "0.7.0"
embedded-io-async = "0.6"
futures = { version = "0.3", default-features = false, features = ["async-await"] }
heapless = "0.9.2"
num_enum = { version = "0.7.5", default-features = false }
portable-atomic = { version = "1", features = ["critical-section"] }
