[package]
name = "ctl"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ctl"
path = "src/main.rs"

[dependencies]
link = { path = "../link", default-features = false, features = ["std"] }
bootloader = { path = "../bootloader" }
tokio = { version = "1.48.0", features = ["full"] }
tokio-serial = "5.4"
clap = { version = "4", features = ["derive"] }
embedded-io-adapters = { version = "0.6", features = ["tokio-1"] }
serialport = "4.8.1"
hex = "0.4"
indicatif = "0.17"
