[package]
name = "ctl"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ctl"
path = "src/main.rs"

[dependencies]
link = { path = "../link", default-features = false, features = ["ctl"] }
clap = { version = "4", features = ["derive"] }
serialport = "4.8.1"
hex = "0.4"
indicatif = "0.17"
rand = "0.9"
reedline-repl-rs = { version = "1.3", features = ["derive"] }
# Vendored espflash for NET chip flashing
espflash = { path = "../vendor/espflash/espflash", default-features = false, features = ["serialport"] }
log = "0.4"
crossterm = "0.28"
futures = { version = "0.3", default-features = false, features = ["executor"] }
