[package]
name = "ctl"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ctl"
path = "src/main.rs"

[dependencies]
link = { path = "../link", default-features = false, features = ["ctl"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
indicatif = "0.17"
rand = "0.9"
reedline-repl-rs = { version = "1.3", features = ["derive"] }
log = "0.4"
crossterm = "0.28"
heapless = "0.9"
# Async runtime and serial
tokio = { version = "1", features = ["rt", "macros"] }
tokio-serial = "5"
futures = "0.3"
# Keep serialport for port enumeration
serialport = "4.8.1"
