[package]
name = "link"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
async-ringbuffer = "0.5.5"
critical-section = { version = "1.2", features = ["std"] }
embedded-io-adapters = { version = "0.6", features = ["futures-03"], default-features = false }
virtual-serialport = "0.1.3"
tokio = { version = "1.48.0", features = ["full"] }

[features]
# Chip module features - each instantiation crate enables only what it needs
mgmt = []
net = []
ui = []

# CTL core - async-first implementation, works everywhere (no std required beyond alloc)
ctl-core = ["alloc"]

# Full CTL with flashing support
ctl = [
    "ctl-core",
    "std",
    "dep:log",
    "dep:thiserror",
    # espflash dependencies (now embedded)
    "dep:base64",
    "dep:bitflags",
    "dep:bytemuck",
    "dep:esp-idf-part",
    "dep:gimli",
    "dep:miette",
    "dep:object",
    "dep:strum",
    "dep:reed-solomon",
    "dep:regex",
    "dep:slip-codec",
    "dep:toml",
    "dep:libc",
]

# Async CTL support (for WASM) - enables async TLV traits and CtlCore
async-ctl = ["ctl-core"]

# All modules enabled - for development and testing
all = ["mgmt", "net", "ui", "ctl"]
default = ["all", "defmt"]

# Logging
defmt = ["dep:defmt", "heapless/defmt"]
trace-tlv = ["defmt"]  # Verbose TLV read/write logging

# Platform features
std = ["dep:md-5", "dep:miniz_oxide", "futures/executor", "futures/std"]
alloc = ["serde/alloc"]  # Use heap-allocated types where possible (e.g., WifiSsid)
audio-buffer = ["dep:embassy-time"]  # Enable jitter buffering for audio playback
esp-idf = ["std", "alloc"]  # ESP-IDF std environment - uses esp-idf's critical-section impl

[dependencies]
defmt = { version = "1", optional = true }
embassy-sync = "0.7.0"
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-io = "0.6"
embedded-io-async = "0.6"
futures = { version = "0.3", default-features = false, features = ["async-await"] }
heapless = { version = "0.9", features = ["serde"] }
num_enum = { version = "0.7.5", default-features = false }
portable-atomic = { version = "1" }  # critical-section feature conflicts with esp-idf, so we don't enable it by default
serde = { version = "1", default-features = false, features = ["derive"] }
postcard = "1"
embedded-storage = "0.3"
aes-gcm = { version = "0.10", default-features = false, features = ["aes"] }
hkdf = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
embassy-futures = "0.1.2"
embassy-time = { version = "0.4", optional = true }
md-5 = { version = "0.10", optional = true, default-features = false }
miniz_oxide = { version = "0.8", optional = true, default-features = false, features = ["with-alloc"] }
audio-codec-algorithms = { version = "0.7", default-features = false }
# CTL dependencies
log = { version = "0.4", optional = true }
thiserror = { version = "2", optional = true }
# Embedded espflash dependencies
base64 = { version = "0.22", optional = true }
bitflags = { version = "2.9", optional = true }
bytemuck = { version = "1.23", features = ["derive"], optional = true }
esp-idf-part = { version = "0.6", optional = true }
gimli = { version = "0.32.3", optional = true }
miette = { version = "7.6", optional = true }
object = { version = "0.38", optional = true }
strum = { version = "0.27", features = ["derive"], optional = true }
reed-solomon = { version = "0.2.1", optional = true }
regex = { version = "1.11", optional = true }
slip-codec = { version = "0.4", optional = true }
toml = { version = "0.9", optional = true }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.174", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.30", features = ["time"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
