[package]
name = "link"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
async-ringbuffer = "0.5.5"
critical-section = { version = "1.2", features = ["std"] }
embedded-io-adapters = { version = "0.6", features = ["futures-03"], default-features = false }
virtual-serialport = "0.1.3"
tokio = { version = "1.48.0", features = ["full"] }

[features]
# Chip module features - each instantiation crate enables only what it needs
mgmt = []
ui = []
net = ["std", "alloc"]

# Full CTL with flashing support
ctl = [
    "alloc",
    "std",
    "dep:log",
    "dep:thiserror",
    "dep:espflash",
    "dep:libc",
]

default = ["mgmt", "net", "ui", "ctl", "defmt"]

# Logging
defmt = ["dep:defmt", "heapless/defmt"]

# Platform features
std = ["dep:md-5", "dep:miniz_oxide", "futures/executor", "futures/std"]
alloc = ["serde/alloc"]  # Use heap-allocated types where possible (e.g., WifiSsid)

[dependencies]
defmt = { version = "1", optional = true }
embassy-sync = "0.7.0"
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-io = "0.6"
embedded-io-async = "0.6"
futures = { version = "0.3", default-features = false, features = ["async-await"] }
heapless = { version = "0.9", features = ["serde"] }
num_enum = { version = "0.7.5", default-features = false }
portable-atomic = { version = "1" }  # critical-section feature conflicts with esp-idf, so we don't enable it by default
serde = { version = "1", default-features = false, features = ["derive"] }
postcard = "1"
embedded-storage = "0.3"
aes-gcm = { version = "0.10", default-features = false, features = ["aes"] }
hkdf = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
embassy-futures = "0.1.2"
md-5 = { version = "0.10", optional = true, default-features = false }
miniz_oxide = { version = "0.8", optional = true, default-features = false, features = ["with-alloc"] }
audio-codec-algorithms = { version = "0.7", default-features = false }
# CTL dependencies
log = { version = "0.4", optional = true }
thiserror = { version = "2", optional = true }
# espflash (vendor crate for ESP32 flashing)
espflash = { path = "../../link-vendor/espflash/espflash", default-features = false, optional = true }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.174", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.30", features = ["time"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
