[package]
edition = "2021"
name = "mgmt"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["paint-stack"] }

defmt = "1"
defmt-rtt = "1"

embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-stm32 = { version = "0.5", features = ["defmt", "stm32f072cb", "memory-x", "exti", "chrono", "time-driver-any"] }
embassy-sync = { version = "0.7", features = ["defmt"] }
embassy-time = { version = "0.5", features = ["defmt"] }
heapless = "0.9"
embedded-hal = "1"

panic-probe = { version = "1", features = ["print-defmt"] }
num_enum = { version = "0.7", default-features = false }
embedded-io-async = "0.7"
link = { path = "../link", default-features = false, features = ["mgmt", "defmt"] }
embedded-io = "0.7"
cortex-m-stack = "0.2.1"

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2

[patch.crates-io]
embassy-embedded-hal = { path = "../../link-vendor/embassy/embassy-embedded-hal" }
embassy-executor = { path = "../../link-vendor/embassy/embassy-executor" }
embassy-executor-macros = { path = "../../link-vendor/embassy/embassy-executor-macros" }
embassy-executor-timer-queue = { path = "../../link-vendor/embassy/embassy-executor-timer-queue" }
embassy-futures = { path = "../../link-vendor/embassy/embassy-futures" }
embassy-hal-internal = { path = "../../link-vendor/embassy/embassy-hal-internal" }
embassy-stm32 = { path = "../../link-vendor/embassy/embassy-stm32" }
embassy-sync = { path = "../../link-vendor/embassy/embassy-sync" }
embassy-time = { path = "../../link-vendor/embassy/embassy-time" }
embassy-time-driver = { path = "../../link-vendor/embassy/embassy-time-driver" }
embassy-time-queue-utils = { path = "../../link-vendor/embassy/embassy-time-queue-utils" }
embassy-usb-driver = { path = "../../link-vendor/embassy/embassy-usb-driver" }
embassy-usb-synopsys-otg = { path = "../../link-vendor/embassy/embassy-usb-synopsys-otg" }
embassy-net-driver = { path = "../../link-vendor/embassy/embassy-net-driver" }
