[package]
edition = "2021"
name = "mgmt"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["paint-stack"] }

defmt = "1"
defmt-rtt = "1"

embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-stm32 = { version = "0.5", features = ["defmt", "stm32f072cb", "memory-x", "exti", "chrono", "time-driver-any"] }
embassy-sync = { version = "0.7", features = ["defmt"] }
embassy-time = { version = "0.5", features = ["defmt"] }
heapless = "0.9"
embedded-hal = "1"

panic-probe = { version = "1", features = ["print-defmt"] }
num_enum = { version = "0.7", default-features = false }
embedded-io-async = "0.7"
link = { path = "../link", default-features = false, features = ["mgmt", "defmt"] }
embedded-io = "0.7"
cortex-m-stack = "0.2.1"

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2

[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/link-rs/embassy.git", rev = "cf6f9d2" }
embassy-executor = { git = "https://github.com/link-rs/embassy.git", rev = "cf6f9d2" }
embassy-executor-macros = { git = "https://github.com/link-rs/embassy.git", rev = "cf6f9d2" }
embassy-executor-timer-queue = { git = "https://github.com/link-rs/embassy.git", rev = "cf6f9d2" }
embassy-futures = { git = "https://github.com/link-rs/embassy.git", rev = "cf6f9d2" }
embassy-hal-internal = { git = "https://github.com/link-rs/embassy.git", rev = "cf6f9d2" }
embassy-stm32 = { git = "https://github.com/link-rs/embassy.git", rev = "cf6f9d2" }
embassy-sync = { git = "https://github.com/link-rs/embassy.git", rev = "cf6f9d2" }
embassy-time = { git = "https://github.com/link-rs/embassy.git", rev = "cf6f9d2" }
embassy-time-driver = { git = "https://github.com/link-rs/embassy.git", rev = "cf6f9d2" }
embassy-time-queue-utils = { git = "https://github.com/link-rs/embassy.git", rev = "cf6f9d2" }
embassy-usb-driver = { git = "https://github.com/link-rs/embassy.git", rev = "cf6f9d2" }
embassy-usb-synopsys-otg = { git = "https://github.com/link-rs/embassy.git", rev = "cf6f9d2" }
embassy-net-driver = { git = "https://github.com/link-rs/embassy.git", rev = "cf6f9d2" }
