[package]
name = "net-idf"
version = "0.1.0"
authors = ["Richard Barnes <rlb@ipv.sx>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "net-idf"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"
quicr = { version = "0.1.0", path = "../vendor/quicr", features = ["esp-idf"] }

# --- Optional Embassy Integration ---
# esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

# If you enable embassy-time-driver, you MUST also add one of:

# a) Standalone Embassy libs ( embassy-time, embassy-sync etc.) with a foreign async runtime:
# embassy-time = { version = "0.4.0", features = ["generic-queue-8"] } # NOTE: any generic-queue variant will work

# b) With embassy-executor:
# embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }

# NOTE: if you use embassy-time with embassy-executor you don't need the generic-queue-8 feature

[build-dependencies]
embuild = "0.33"

[package.metadata.esp-idf-sys]
extra_components = [
    { component_dirs = "../vendor/quicr/esp-component" }
]

