[package]
edition = "2021"
name = "net"
rust-version = "1.86"
version = "0.1.0"

[[bin]]
name = "net"
path = "./src/bin/main.rs"

[dependencies]
defmt = "1"
esp-bootloader-esp-idf = { version = "0.2", features = ["esp32s3", "defmt"] }
esp-hal = { version = "=1.0.0-rc.0", features = ["defmt", "esp32s3", "unstable"] }
esp-hal-embassy = { version = "0.9", features = ["defmt", "esp32s3"] }
esp-alloc = { version = "0.8", features = ["defmt"] }

embassy-executor = { version = "0.7", features = ["defmt", "task-arena-size-20480"] }
embassy-time = { version = "0.4", features = ["defmt"] }
embassy-sync = { version = "0.7", features = ["defmt"] }

embedded-io = { version = "0.6", features = ["defmt-03"] }
embedded-io-async = { version = "0.6", features = ["defmt-03"] }

rtt-target = { version = "0.6", features = ["defmt"] }
critical-section = "1.2"

link = { path = "../core", features = ["defmt", "trace-tlv"] }

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
