[package]
name = "net"
version = "0.1.0"
authors = ["Richard Barnes <rlb@ipv.sx>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "net"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51" }
embassy-time = { version = "0.5", features = ["generic-queue-8"] }
quicr = { version = "0.1.0", features = ["esp-idf"] }
link = { path = "../link", default-features = false, features = ["net"] }
heapless = { version = "0.9", features = ["serde"] }
postcard = { version = "1", features = ["alloc"] }
embedded-io = "0.7"
embedded-svc = { version = "0.28.1", default-features = false }

[build-dependencies]
embuild = "0.33"

[patch.crates-io]
quicr = { git = "https://github.com/Quicr/quicr-rs.git" }

