[package]
edition = "2021"
name = "ui"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["paint-stack"] }
cortex-m-stack = "0.1"

defmt = "1"
defmt-rtt = "1"

embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-stm32 = { version = "0.4", features = ["defmt", "stm32f405rg", "memory-x", "time-driver-any", "exti"] }
embassy-sync = { version = "0.7", features = ["defmt"] }
embassy-time = { version = "0.5", features = ["defmt"] }
panic-probe = { version = "1", features = ["print-defmt"] }

embedded-io-async = "0.6"
embedded-hal = "1"
link = { path = "../link", default-features = false, features = ["ui", "defmt"] }

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2

[patch.crates-io]
embassy-embedded-hal = { path = "../vendor/embassy/embassy-embedded-hal" }
embassy-executor = { path = "../vendor/embassy/embassy-executor" }
embassy-executor-macros = { path = "../vendor/embassy/embassy-executor-macros" }
embassy-futures = { path = "../vendor/embassy/embassy-futures" }
embassy-hal-internal = { path = "../vendor/embassy/embassy-hal-internal" }
embassy-stm32 = { path = "../vendor/embassy/embassy-stm32" }
embassy-sync = { path = "../vendor/embassy/embassy-sync" }
embassy-time = { path = "../vendor/embassy/embassy-time" }
embassy-time-driver = { path = "../vendor/embassy/embassy-time-driver" }
embassy-time-queue-utils = { path = "../vendor/embassy/embassy-time-queue-utils" }
embassy-usb-driver = { path = "../vendor/embassy/embassy-usb-driver" }
embassy-usb-synopsys-otg = { path = "../vendor/embassy/embassy-usb-synopsys-otg" }
embassy-net-driver = { path = "../vendor/embassy/embassy-net-driver" }
