[package]
edition = "2021"
name = "ui"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["paint-stack"] }
cortex-m-stack = "0.1"

defmt = "1"
defmt-rtt = "1"

embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-stm32 = { version = "0.5", features = ["defmt", "stm32f405rg", "memory-x", "time-driver-any", "exti"] }
embassy-sync = { version = "0.7", features = ["defmt"] }
embassy-time = { version = "0.5", features = ["defmt"] }
panic-probe = { version = "1", features = ["print-defmt"] }

embedded-io-async = "0.7"
embedded-hal = "1"
link = { path = "../link", default-features = false, features = ["ui", "defmt"] }

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2

[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/link-rs/embassy.git" }
embassy-executor = { git = "https://github.com/link-rs/embassy.git" }
embassy-executor-macros = { git = "https://github.com/link-rs/embassy.git" }
embassy-futures = { git = "https://github.com/link-rs/embassy.git" }
embassy-hal-internal = { git = "https://github.com/link-rs/embassy.git" }
embassy-stm32 = { git = "https://github.com/link-rs/embassy.git" }
embassy-sync = { git = "https://github.com/link-rs/embassy.git" }
embassy-time = { git = "https://github.com/link-rs/embassy.git" }
embassy-time-driver = { git = "https://github.com/link-rs/embassy.git" }
embassy-time-queue-utils = { git = "https://github.com/link-rs/embassy.git" }
embassy-usb-driver = { git = "https://github.com/link-rs/embassy.git" }
embassy-usb-synopsys-otg = { git = "https://github.com/link-rs/embassy.git" }
embassy-net-driver = { git = "https://github.com/link-rs/embassy.git" }
