[package]
name = "web-link"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
link = { path = "../link", default-features = false, features = ["std"] }

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Web APIs
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "WebSocket",
    "MessageEvent",
    "BinaryType",
    "Blob",
    "CloseEvent",
    "ErrorEvent",
] }

# Async
futures = "0.3"

# Logging
console_error_panic_hook = "0.1"

# Serialization for passing data to JS
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# Async channels for inter-chip communication
async-channel = "2"

# Embedded IO traits
embedded-io-async = "0.6"

# Hex encoding
hex = "0.4"

[profile.release]
opt-level = "s"
lto = true
