[package]
name = "moq-sub"
version = "0.1.0"
edition = "2021"
description = "Simple MoQ subscriber tool for debugging and monitoring tracks"

[[bin]]
name = "moq-sub"
path = "src/main.rs"

[dependencies]
quicr = { path = "../../vendor/quicr", default-features = false, features = ["std", "openssl"] }
clap = { version = "4", features = ["derive"] }
ctrlc = "3.4"
env_logger = "0.11"

# Embassy runtime
embassy-executor = { version = "0.9", features = ["arch-std", "executor-thread"] }
embassy-time = { version = "0.5", features = ["std"] }
embassy-futures = "0.1"
